<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detailKeyboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgbismillah"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_key"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/harga"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
          android:paddingTop="20dp"
                android:layout_height="wrap_content">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginEnd="16dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe_keyboard"
                            /><TextView
                            android:id="@+id/tipe_keyboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipe_keyboard"
                        />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/tipe_switch"
                        />
                        <TextView
                            android:id="@+id/tipe_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe_switch"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/berat"
                            />
                        <TextView
                            android:id="@+id/berat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/berat"
                            />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/fitur_spesial"

                            />
                        <TextView
                            android:id="@+id/fitur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fitur_spesial"
                            />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="30"
                android:fontFamily="@font/quicksand_light"
                android:text="@string/detail_key"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/cari_barang"
                android:paddingTop="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>